[package]
name = "rustafarian-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam="0.8"
crossbeam-channel="0.5"
rand = { version = "0.8" }
rustafarian-shared = { git = "https://github.com/Rustafarian-Unitn/rustafarian-shared"}
#rustafarian-shared = { path = "../rustafarian-shared" }
chrono = "0.4"